f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/d9ae9c25-4bc5-4507-83f9-edf988812194/kubernates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment-3fbcd35a-ceca-4f81-a80f-78063c3af47e
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-3fbcd35a-ceca-4f81-a80f-78063c3af47e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr-3fbcd35a-ceca-4f81-a80f-78063c3af47e
  template:
    metadata:
      labels:
        app: solr-3fbcd35a-ceca-4f81-a80f-78063c3af47e
    spec:
      containers:
        - name: solr-3fbcd35a-ceca-4f81-a80f-78063c3af47e
          image: ravi8881/2e49f282-85d5-4866-af7d-8133a75e6769-f5e66296-a68f-4fae-ab34-616938e14a6b-bc5fa525-1f32-4c53-bf17-b98dd59ff12e-d9ae9c25-4bc5-4507-83f9-edf988812194:25.0.0
          ports:
            - containerPort: 8983
          volumeMounts:
            - name: solr-data-volume
              mountPath: /data # This path is where Solr looks for its cores
      volumes:
        - name: solr-data-volume
          persistentVolumeClaim:
            claimName: d9ae9c25-4bc5-4507-83f9-edf988812194 # This name must match the PVC metadata.name
      securityContext:
        runAsUser: 8983
        runAsGroup: 8983
        fsGroup: 8983
