f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/d9ae9c25-4bc5-4507-83f9-edf988812194/kubernates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-service-68140904-3b95-4819-b0b6-5afcaa0c1359
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-68140904-3b95-4819-b0b6-5afcaa0c1359
spec:
  selector:
    app: solr-68140904-3b95-4819-b0b6-5afcaa0c1359
  ports:
    - port: 80
      targetPort: 8983
      protocol: TCP
  type: ClusterIP
