f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/d9ae9c25-4bc5-4507-83f9-edf988812194/kubernates/solr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-ingress-0e5cdbea-010e-42e2-90b9-078829365f1b
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-0e5cdbea-010e-42e2-90b9-078829365f1b
spec:
  ingressClassName: nginx
  rules:
    - host: tms-08zm87.9xkwjo.us-east-2.febe.kbs
      http:
        paths:
          - path: /solr/
            pathType: Prefix
            backend:
              service:
                name: solr-service-0e5cdbea-010e-42e2-90b9-078829365f1b
                port:
                  number: 80
